--- a/src/AVOne.Server/Pages/App/Settings/SystemSettings.razor
+++ b/src/AVOne.Server/Pages/App/Settings/SystemSettings.razor
@@ -25,12 +25,20 @@
                 </MListItem>
                 <MListItem>
                     <MListItemIcon>
-                            <MIcon>fas fa-wrench</MIcon>
+                            <MIcon>fas fa-wifi</MIcon>
                     </MListItemIcon>
                     <MListItemContent>
                             <MListItemTitle>@(I18n.T("Settings.System.Proxy.Title"))</MListItemTitle>
                     </MListItemContent>
                 </MListItem>
+                    <MListItem>
+                        <MListItemIcon>
+                            <MIcon>fas fa-download</MIcon>
+                        </MListItemIcon>
+                        <MListItemContent>
+                            <MListItemTitle>@(I18n.T("Settings.System.Download.Title"))</MListItemTitle>
+                        </MListItemContent>
+                    </MListItem>
             </MListItemGroup>
         </MList>
     </MCol>
@@ -81,16 +89,16 @@
                 <MCardText>
                     <MRow>
                         <MCol Md=12 Sm=12>
-                            <MTextField Value="@(ApplicationPaths.DataPath)" Label="@(I18n.T("Settings.System.Paths.DataPath"))" Outlined Readonly TValue="string" />
+                            <MTextField Disabled Value="@(ApplicationPaths.DataPath)" Label="@(I18n.T("Settings.System.Paths.DataPath"))" Outlined Readonly TValue="string" />
                         </MCol>
                         <MCol Md=12 Sm=12>
-                            <MTextField Value="@(ApplicationPaths.PluginsPath)" Label="@(I18n.T("Settings.System.Paths.PluginsPath"))" Outlined Readonly TValue="string" />
+                            <MTextField Disabled Value="@(ApplicationPaths.PluginsPath)" Label="@(I18n.T("Settings.System.Paths.PluginsPath"))" Outlined Readonly TValue="string" />
                         </MCol>
                         <MCol Md=12 Sm=12>
-                            <MTextField Value="@(ApplicationPaths.LogDirectoryPath)" Label="@(I18n.T("Settings.System.Paths.LogDirectoryPath"))" Outlined Readonly TValue="string" />
+                            <MTextField Disabled Value="@(ApplicationPaths.LogDirectoryPath)" Label="@(I18n.T("Settings.System.Paths.LogDirectoryPath"))" Outlined Readonly TValue="string" />
                         </MCol>
                         <MCol Md=12 Sm=12>
-                            <MTextField Value="@(ApplicationPaths.CachePath)" Label="@(I18n.T("Settings.System.Paths.CachePath"))" Outlined Readonly TValue="string" />
+                            <MTextField Disabled Value="@(ApplicationPaths.CachePath)" Label="@(I18n.T("Settings.System.Paths.CachePath"))" Outlined Readonly TValue="string" />
                         </MCol>
                     </MRow>
                 </MCardText>
@@ -120,6 +128,39 @@
                                 @(I18n.T("Common.SaveChanges")) </MButton>
                             <MButton Outlined Class="ml-2 grey--text font-weight-black" OnClick="ResetConfig">
                             @(I18n.T("Common.Reset")) </MButton>
+                        </MItem>
+                    </MList>
+                </MCardTitle>
+            </MCard>
+        }
+        @if (_current == 3)
+        {
+            <MCard>
+                <MCardTitle>
+                    <MList Style="width:100%">
+                        <MRow Class="mt-2">
+                            <MCol Md=12 Sm=12>
+                                <MCol Md=12 Sm=12>
+                                    <MTextField @bind-Value="ConfigurationManager.CommonConfiguration.DownloadConfig.DefaultDownloadThreadCount"
+                                            Label="@(I18n.T("Settings.System.Download.ThreadCount"))" Outlined TValue="int" />
+                                    </MCol>
+                                </MCol>
+                                <MCol Md=12 Sm=12>
+                                    <MTextField @bind-Value="ConfigurationManager.CommonConfiguration.DownloadConfig.DefaultRetryCount"
+                                        Label="@(I18n.T("Settings.System.Download.RetryCount"))" Outlined TValue="int" />
+                                </MCol>
+                                <MCol Md=12 Sm=12>
+                                <MTextField @bind-Value="ConfigurationManager.CommonConfiguration.DownloadConfig.DefaultDownloadDir"
+                                        Label="@(I18n.T("Settings.System.Download.DownloadDir"))" Outlined TValue="string" />
+                                </MCol>
+                                </MRow>
+                                <MItem>
+                                <MButton OnClick="SaveConfig" Color="deep-purple white--text font-weight-black">
+                                @(I18n.T("Common.SaveChanges"))
+                            </MButton>
+                            <MButton Outlined Class="ml-2 grey--text font-weight-black" OnClick="ResetConfig">
+                            @(I18n.T("Common.Reset"))
+                            </MButton>
                         </MItem>
                     </MList>
                 </MCardTitle>
