--- a/src/AVOne.Server/Shared/Confirm.razor
+++ b/src/AVOne.Server/Shared/Confirm.razor
@@ -31,7 +31,7 @@
     public bool Value {get;set;} = false;
 
     [Parameter]
-    public string Title {get;set;}
+    public string? Title {get;set;}
 
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
