--- a/src/AVOne.Server/Pages/_Layout.cshtml
+++ b/src/AVOne.Server/Pages/_Layout.cshtml
@@ -43,7 +43,12 @@
         window.QmsgCloseLoading = function () {
             window.QmsgDefaultLoader.close();
         }
-
+    </script>
+    <script>
+        // disable context menu
+        document.addEventListener('contextmenu', function (e) {
+            e.preventDefault();
+        });
     </script>
 </body>
 
