--- a/src/AVOne.Server/Pages/App/Downloads/TaskNav.razor
+++ b/src/AVOne.Server/Pages/App/Downloads/TaskNav.razor
@@ -5,7 +5,7 @@
 @using Furion.TaskQueue;
 @using TaskNavItem=AVOne.Server.Pages.App.Downloads.TaskNavItem;
 @inherits ProCompontentBase
-<MNavigationDrawer Permanent Class="rounded-4" Width="300" Style="overflow: visible;">
+<MNavigationDrawer Permanent Class="rounded-4" Width="250" Style="overflow: visible;">
     <MDialog @bind-Value="addTaskDialog"
              Width="500">
         <ActivatorContent>
@@ -18,33 +18,46 @@
                         <span class="text-h5">@T("Download.Tasks.AddTask")</span>
                     </MCardTitle>
                     <MCardText>
-                        <MTextField Class="mt-2" @bind-Value="_addJobModel.Url"
+                        @if (_addJobModel.Step == 1)
+                        {
+                            <MTextField Class="mt-2" @bind-Value="_addJobModel.Url"
                                     Label='@T("Download.Tasks.AddTaskUrl")' Hint='@T("Download.Tasks.AddTaskUrlHint")' PersistentHint
-                                        Outlined></MTextField>
-                        <MSelect Outlined Label=@T("Download.Detail.Tags") Multiple @bind-Value=_addJobModel.Tags TItem="SelectData"
+                                            Outlined></MTextField>
+                        }
+                        @if (_addJobModel.Step == 2)
+                        {
+                            <MSelect Outlined Label=@T("Download.Detail.DownloadItemIndex") @bind-Value=_addJobModel.DownloadItemKey TItem="BaseDownloadableItem"
+                                 TValue="string" TItemValue="string" Items=@DownloadableItems ItemText="i => i.DisplayName"
+                                 ItemValue="i => i.Key">
+                            </MSelect>
+                            <MSelect Outlined Label=@T("Download.Detail.Tags") Multiple @bind-Value=_addJobModel.Tags TItem="SelectData"
                                  TValue="List<string>" TItemValue="string" Items=@_tagList ItemText="i => i.Label"
                                  ItemValue="i => i.Value">
-                            <SelectionContent Context="_context">
-                                <MChip Style="height:32px;border-radius:32px;" Outlined Close CloseIcon="mdi-close" TextColor="@Tasks.GetColorForTag(_context.Item.Value)"
+                                <SelectionContent Context="_context">
+                                    <MChip Style="height:32px;border-radius:32px;" Outlined Close CloseIcon="mdi-close" TextColor="@Tasks.GetColorForTag(_context.Item.Value)"
                                        OnCloseClick="()=>HandleCloseClick(_context.Item.Label)">@_context.Item.Label</MChip>
-                            </SelectionContent>
-                            </MSelect>
-                        <div class='@(showAdvancedDownloadOpt?"":"d-none")'>
-                            <MTextField Class="mt-2" @bind-Value="_addJobModel.ThreadCount"
+                                </SelectionContent>
+                                </MSelect>
+                            <div class='@(showAdvancedDownloadOpt?"":"d-none")'>
+                                <MTextField Class="mt-2" @bind-Value="_addJobModel.ThreadCount"
                                         Label='@T("Download.Tasks.AddTaskThreadCount")' PersistentHint
-                                                Outlined></MTextField>
-                            <MTextField Class="mt-2" @bind-Value="_addJobModel.RetryCount"
+                                                    Outlined></MTextField>
+                                <MTextField Class="mt-2" @bind-Value="_addJobModel.RetryCount"
                                         Label='@T("Download.Tasks.AddTaskRetryCount")' PersistentHint
-                                                Outlined></MTextField>
-                        </div>
-
+                                                    Outlined></MTextField>
+                            </div>
+                        }
                     </MCardText>
                     <MCardActions Class="justify-end">
-                        <MButton Color="secondary" @onclick="()=> {showAdvancedDownloadOpt = !showAdvancedDownloadOpt;}">
-                            <MIcon>
-                                @(showAdvancedDownloadOpt?"mdi-menu-up":"mdi-menu-down")
-                            </MIcon>@(T("Download.Tasks.AdvancedOption"))
-                        </MButton>
+                        @if (_addJobModel.Step == 2)
+                        {
+                            <MButton Color="secondary" @onclick="()=> {showAdvancedDownloadOpt = !showAdvancedDownloadOpt;}">
+                                <MIcon>
+                                    @(showAdvancedDownloadOpt ? "mdi-menu-up" : "mdi-menu-down")
+                                </MIcon>@(T("Download.Tasks.AdvancedOption"))
+                            </MButton>
+                        }
+
                         <MButton Type="reset" @onclick="()=> {addTaskDialog = false;_addJobModel = new();showAdvancedDownloadOpt = false;}">@T("Common.Cancel")</MButton>
                         <MButton Type="submit" Color="primary">@T("Common.Submit")</MButton>
                     </MCardActions>
@@ -113,8 +126,14 @@
         public string? DownloadDir { get; set; } = defaultOutputDir;
 
         public List<string> Tags { get; set; } = new List<string>();
+
+        public int Step { get; set; } = 1;
+
+        public string? DownloadItemKey { get; set; }
     }
     private List<SelectData> _tagList = new List<SelectData>();
+
+    private List<BaseDownloadableItem> DownloadableItems { get; set; } = new List<BaseDownloadableItem>();
     private void HandleCloseClick(string lable)
     {
         _addJobModel.Tags.Remove(lable);
@@ -144,46 +163,69 @@
     {
         await InvokeAsync(async () =>
         {
-            addTaskDialog = false;
-            showAdvancedDownloadOpt = false;
+            var step = _addJobModel.Step;
+            await this.AddDownloadJob();
             StateHasChanged();
-            await this.AddDownloadJob(_addJobModel);
-            _addJobModel = new AddJobModel();
+            if (step == 2)
+            {
+                addTaskDialog = false;
+                showAdvancedDownloadOpt = false;
+                _addJobModel = new AddJobModel();
+            }
         });
     }
 
-    private async Task AddDownloadJob(AddJobModel addJobModel)
+    private async Task AddDownloadJob()
     {
-        this.ShowLoading("Download.Tasks.ExtractingMedia", false, 5000, addJobModel.Url!);
-        var jobItems = ProviderManager?.GetMediaExtractorProviders(addJobModel.Url!);
-        var extractorProvider = jobItems?.FirstOrDefault();
-        if (extractorProvider is null)
+        if (_addJobModel.Step == 1)
         {
-            var failedReason = T("Download.Tasks.FailedReason.NoExtrator", addJobModel.Url!);
-            this.Error("Download.Tasks.Message.AddTaskFailed", addJobModel.Url!, failedReason);
-            return;
+            this.ShowLoading("Download.Tasks.ExtractingMedia", false, 5000, _addJobModel.Url!);
+            var jobItems = ProviderManager?.GetMediaExtractorProviders(_addJobModel.Url!);
+            var extractorProvider = jobItems?.FirstOrDefault();
+            if (extractorProvider is null)
+            {
+                this.CloseLoading();
+                var failedReason = T("Download.Tasks.FailedReason.NoExtrator", _addJobModel.Url!);
+                this.Error("Download.Tasks.Message.AddTaskFailed", _addJobModel.Url!, failedReason);
+                return;
+            }
+
+            var items = await extractorProvider.ExtractAsync(_addJobModel.Url!);
+            if (items is null || items.Count() == 0)
+            {
+                this.CloseLoading();
+                var failedReason = T("Download.Tasks.FailedReason.GetDownloadItemFailed", _addJobModel.Url!);
+                this.Error("Download.Tasks.Message.AddTaskFailed", _addJobModel.Url!, failedReason);
+                return;
+            }
+            DownloadableItems = items.ToList();
+            _addJobModel.DownloadItemKey = DownloadableItems.FirstOrDefault()?.Key;
+            _addJobModel.Step = 2;
+            this.CloseLoading();
         }
 
-        var item = await extractorProvider.ExtractAsync(addJobModel.Url!);
-        var jobItem = item.FirstOrDefault();
-        if (jobItem is null)
+        else if (_addJobModel.Step == 2)
         {
-            var failedReason = T("Download.Tasks.FailedReason.GetDownloadItemFailed", addJobModel.Url!);
-            this.Error("Download.Tasks.Message.AddTaskFailed", addJobModel.Url!, failedReason);
-            return;
+            var jobItem = DownloadableItems.FirstOrDefault(x => x.Key == _addJobModel.DownloadItemKey);
+            if (jobItem is null)
+            {
+                var failedReason = T("Download.Tasks.FailedReason.GetDownloadItemFailed", _addJobModel.Url!);
+                this.Error("Download.Tasks.Message.AddTaskFailed", _addJobModel.Url!, failedReason);
+                return;
+            }
+            var downloadDir = _addJobModel.DownloadDir ?? ConfigurationManager?.CommonConfiguration.DownloadConfig.DefaultDownloadDir;
+            var threadCount = _addJobModel.ThreadCount ?? ConfigurationManager?.CommonConfiguration.DownloadConfig.DefaultDownloadThreadCount;
+            var retryCount = _addJobModel.ThreadCount ?? ConfigurationManager?.CommonConfiguration.DownloadConfig.DefaultRetryCount;
+            var retryWait = _addJobModel.ThreadCount ?? ConfigurationManager?.CommonConfiguration.DownloadConfig.DefaultRetryWait;
+            var opt = new DownloadOpts { ThreadCount = threadCount, OutputDir = downloadDir, RetryCount = retryCount, RetryWait = retryWait };
+            var downloadJob = new DownloadAVJob();
+            downloadJob.DownloadableItem = jobItem;
+            downloadJob.DownloadOpts = opt;
+            downloadJob.Tags = _addJobModel.Tags;
+            JobManager?.AddJob(downloadJob);
+            await JobManager!.EnqueueJob(downloadJob);
+            Navigation?.NavigateTo(GlobalVariables.DefaultRoute, true);
         }
-        this.CloseLoading();
-        var downloadDir = addJobModel.DownloadDir ?? ConfigurationManager?.CommonConfiguration.DownloadConfig.DefaultDownloadDir;
-        var threadCount = addJobModel.ThreadCount ?? ConfigurationManager?.CommonConfiguration.DownloadConfig.DefaultDownloadThreadCount;
-        var retryCount = addJobModel.ThreadCount ?? ConfigurationManager?.CommonConfiguration.DownloadConfig.DefaultRetryCount;
-        var retryWait = addJobModel.ThreadCount ?? ConfigurationManager?.CommonConfiguration.DownloadConfig.DefaultRetryWait;
-        var opt = new DownloadOpts { ThreadCount = threadCount, OutputDir = downloadDir, RetryCount = retryCount, RetryWait = retryWait };
-        var downloadJob = new DownloadAVJob();
-        downloadJob.DownloadableItem = jobItem;
-        downloadJob.DownloadOpts = opt;
-        downloadJob.Tags = addJobModel.Tags;
-        JobManager?.AddJob(downloadJob);
-        await JobManager!.EnqueueJob(downloadJob);
-        Navigation?.NavigateTo(GlobalVariables.DefaultRoute, true);
+
     }
 }
