--- a/src/AVOne.Server/Pages/_Layout.cshtml
+++ b/src/AVOne.Server/Pages/_Layout.cshtml
@@ -42,6 +42,7 @@
 
         window.QmsgCloseLoading = function () {
             window.QmsgDefaultLoader.close();
+            Qmsg.closeAll();
         }
     </script>
     <script>
