--- a/src/AVOne.Server/_Imports.razor
+++ b/src/AVOne.Server/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using BlazorComponent
 @using Microsoft.AspNetCore.Components.Web
 @using Masa.Blazor
+@using AVOne.Models.Item;
 @using AVOne.Server.Global
 @using AVOne.Server.Data
 @using AVOne.Server.Shared
